:bug: Fix alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,5 @@
 }
 
 Cell {
-  align: center middle;
-  box_sizing: border-box;
+    content-align: center middle;
 }
-
